[project]
name = "crypteria"
version = "0.1.0"
description = "Crypteria SDK for local encryption and cloud storage operations"
authors = [
  { name="Derradji Senani" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "cryptography>=46.0.0",
  "dropbox>=12.0.0",
  "google-api-python-client>=2.0.0",
  "google-auth>=2.0.0",
  "google-auth-oauthlib>=1.0.0",
  "SQLAlchemy>=2.0.0",
  "tinydb>=4.0.0"
]

[tool.setuptools]
package-dir = {"" = "crypteria"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"