[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypteria"
version = "1.0.0"
description = "A powerful local-first encryption and secure cloud-storage management toolkit in Python."
readme = "crypteria/README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Senani Derradji", email = "derradji.senani.1@gmail.com"}
]
keywords = ["encryption", "security", "cryptography", "cloud", "google-drive", "backup", "aes"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "cryptography>=45.0.0",
    "keyring>=25.0.0",
    "SQLAlchemy>=2.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.optional-dependencies]
all = [
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.0.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/senani-derradji/crypteria"
Repository = "https://github.com/senani-derradji/crypteria"
Issues = "https://github.com/senani-derradji/crypteria/issues"

[project.scripts]
crypteria = "crypteria:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["crypteria*"]

[tool.setuptools.package-data]
crypteria = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
